<resources>
    <string name="app_name">모임정산</string>
    <string name="action_settings">환경설정</string>
    <string name="address">주소록</string>
    <string name="add_moim">모임 추가</string>
    <string name="add_moim_text">모임의 이름을 입력하세요.</string>
    <string name="add_moim_sample">예) 2월 14일 영등포 모임</string>
    <string name="add_place">장소 추가</string>
    <string name="add_place_text">모임의 장소를 입력하세요.</string>
    <string name="add_place_sample">예) 1차 한신포차</string>
    <string name="add_place_alert">모임을 선택하세요.</string>
    <string name="refresh_moim">갱신하기</string>
    <string name="btn_divide">정산</string>
    <string name="btn_save">저장</string>
    <string name="text_people">사람</string>
    <string name="add_people">참석자를 입력하세요.</string>
    <string name="warning_people">올바른 형식의 참석자 이름을 입력하세요.</string>
    <string name="divide_unit">단위</string>
    <string name="divide_unit_text">정산단위를 선택하세요.</string>
    <string name="warning_select">참석자와 정산단위 및 총금액을 빠짐없이 입력하세요.</string>
    <string name="total">지출</string>
    <string name="add_total">총금액을 입력하세요.</string>
    <string name="warning_total">올바른 형식의 금액을 입력하세요.</string>
    <string name="remainder">수입</string>
    <string name="remainder_text">이월</string>
    <string name="add_remainder_text">이월금액을 입력하세요.</string>
    <string name="warning_remainder">올바른 형식의 금액을 입력하세요.</string>
    <string name="add">추가</string>
    <string name="remove">삭제</string>
    <string name="edit">수정</string>
    <string name="reset">초기화</string>
</resources>
